# MCP

./: .gitignore  meson.build
data/: ex.g6
src/main/mcp/: BR.h  BRO.h  Dist.h  Game.h  Graph.h  IO.h  Player.h
src/main/mcp/execs/: Experiment.cpp  GenG6.cpp  GenInverse.cpp  GenKG6.cpp  Insert.cpp  Read.cpp  Run.cpp  Solve.cpp
